--- a/package.json
+++ b/package.json
@@ -10,27 +10,43 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
+    "@react-navigation/stack": "^7.2.10",
+    "otpless-headless-rn": "^1.0.5",
+    "otpless-react-native": "^1.2.4",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-native": "0.79.1",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.17.4",
+    "react-native-reconnecting-websocket": "^2.0.0",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "18.0.0",
+    "@react-native-community/cli": "^18.0.0",
     "@react-native-community/cli-platform-android": "18.0.0",
     "@react-native-community/cli-platform-ios": "18.0.0",
-    "@react-native/babel-preset": "0.79.2",
-    "@react-native/eslint-config": "0.79.2",
-    "@react-native/metro-config": "0.79.2",
-    "@react-native/typescript-config": "0.79.2",
+    "@react-native/babel-preset": "0.79.1",
+    "@react-native/eslint-config": "0.79.1",
+    "@react-native/metro-config": "0.79.1",
+    "@react-native/typescript-config": "0.79.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "nativewind": "^4.1.23",
+    "postcss": "^8.5.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.0.4"
   },
   "engines": {
